# vk-json-processing-api

./: .dockerignore  .gitignore  README.md  alembic.ini  app.yaml  generate.bash  main.py  pyproject.toml  schema.json  settings.py
api/v1/: __init__.py  app.py  generated.py
cli/: generate_models.py  generate_rest.py  init.py
database/: connection.py
database/controllers/: app.py  generated.py
database/models/: __init__.py  app.py  base.py
k8s/: app-deployment.yaml  database-service.yaml  database-statefulset.yaml
kafka/: __init__.py
migrations/: env.py  migrate.bash
migrations/versions/: a0ef1fd58a15_init_database.py
schemas/v1/: app.py  errors.py  generated.py
utils/: enums.py  errors.py  git_repo.py  json_parser.py  lifespan.py  yaml_parser.py
